@@ -38,6 +38,7 @@ OR (not recommended)
 - Implementation of unauthorized flow with redirects after login.
 - Upgrade of Router component: refactor to support more complex architectures.
 - Upgrade of PHP version to 8.5 (if is globally supported by hosting providers).
+- Upgrade of DataSlave: implementation of index and join for scalable queries.
 
 ---
 
