@@ -4,6 +4,7 @@ namespace FastRaven;
 
 use FastRaven\Exceptions\NotFoundException;
 use FastRaven\Exceptions\NotAuthorizedException;
+use FastRaven\Exceptions\AlreadyAuthorizedException;
 use FastRaven\Exceptions\SmartException;
 use FastRaven\Internal\Core\Kernel;
 
@@ -105,7 +106,8 @@ final class Server {
         LogWorker::error("-SG- " . $e->getMessage());
 
         if(!$this->kernel->isApiRequest()) {
-            if($e instanceof NotFoundException || is_subclass_of($e, NotFoundException::class)) {
+            if($e instanceof NotFoundException || is_subclass_of($e, NotFoundException::class) ||
+            $e instanceof AlreadyAuthorizedException || is_subclass_of($e, AlreadyAuthorizedException::class)) {
                 HeaderWorker::addHeader("Location", $this->kernel->getConfig()->getDefaultNotFoundPathRedirect());
             } else if($e instanceof NotAuthorizedException || is_subclass_of($e, NotAuthorizedException::class)) {
                 if($e->isDomainLevel())
